# se-for-sci-example

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: conf.py  index.md  installation.md
docs/api/: integrator.rst  modules.rst
src/integrator/: __init__.py
tests/: test_basic.py
