[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "integrator-se4sci-sp24"
version = "0.0.1"
description = "Example Python package"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
]
[project.optional-dependencies]
test = ["pytest"]


[tool.mypy]
strict = true


[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/integrator"]
